[gd_scene load_steps=9 format=3 uid="uid://cxhh1j6q0k44y"]

[ext_resource type="FontFile" uid="uid://ikp5rvqml2gx" path="res://assets/fonts/Jaro-Regular-VariableFont_opsz.ttf" id="1_miyc0"]
[ext_resource type="Script" uid="uid://b0yokv1e2ijf4" path="res://scenes/ui-elements/game_menu.gd" id="1_ug53h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug53h"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqhwi"]
bg_color = Color(0.245667, 0.278862, 0.340845, 1)
border_color = Color(0.247059, 0.278431, 0.341176, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_523r4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.52082, 0.644771, 0.863356, 1)
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sc1q"]
bg_color = Color(0.243137, 0.368627, 0.596078, 1)
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color(0.105882, 0.156863, 0.258824, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kvwn"]
bg_color = Color(0.178263, 0.281201, 0.468215, 1)
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color(0.105882, 0.156863, 0.258824, 1)
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Theme" id="Theme_ug53h"]
Button/colors/font_outline_color = Color(0.105882, 0.156863, 0.258824, 1)
Button/colors/font_pressed_color = Color(0.716296, 0.716296, 0.716296, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_miyc0")
Button/styles/disabled = SubResource("StyleBoxFlat_gqhwi")
Button/styles/focus = SubResource("StyleBoxFlat_523r4")
Button/styles/hover = SubResource("StyleBoxFlat_7sc1q")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_7sc1q")
Button/styles/normal = SubResource("StyleBoxFlat_7sc1q")
Button/styles/pressed = SubResource("StyleBoxFlat_1kvwn")

[node name="GameMenu" type="Control"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ug53h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ug53h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -20.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ug53h")
theme_override_constants/separation = 20

[node name="ResumeGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Resume"

[node name="MechBay" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Mech Bay"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
disabled = true
text = "Settings"

[node name="LeaveServer" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Leave Server"

[connection signal="pressed" from="VBoxContainer/ResumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaveServer" to="." method="_on_leave_server_pressed"]
